components/experience/experience.module.scss
.experience {
  margin-bottom: 2.4rem;
  padding: 0 1.2rem 2.4rem;

  border-bottom: 1px solid var(--background-light);
}

.heading {
  display: flex;
  align-items: center;
  justify-content: space-between;

  margin-bottom: 1.2rem;
}

.title {
  font-size: var(--text-md);
  font-weight: bold;
}

.position {
  color: var(--brand);
  font-weight: bold;
}

.description {
  margin-bottom: 1.8rem;
  font-weight: 200;
}

.tech {
  display: flex;
  flex-wrap: wrap;
  gap: 1.2rem;
  span {
    opacity: 0.6;
    transition: 0.2s;
    cursor: default;
    &:hover {
      opacity: 1;
    }
  }
}

